# SH

./: .gitignore
Amara Kuruma/05.04.2023/: main.cpp  wagons.cpp  wagons.hpp
Amara Kuruma/17.04.2023/: main.cpp  rational_number.cpp  rational_number.hpp
CW2_Fares/: CMakeLists.txt  Dockerfile  README.md  dockerfile_run.sh  task1.c  task2.c  task3.c
CW2_Kongdi/: CMakeLists.txt  README.md  dockerfile_run.sh  task1.c  task2.c  task3.c
CW3_Fares/: CMakeLists.txt  Dockerfile  README.md  dockerfile_run.sh  task1.c  task2.c  task3.c
CW3_Fares_CPP/: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake  dockerfile_run.sh  main.cpp  sort.cpp  sort.hpp
CW3_Kongdi/: CMakeLists.txt  README.md  dockerfile_run.sh  task1.c  task2.c  task3.c
CW4/: Control_4.cpp  README.md  text.txt
CW4_Fares_cpp. IOStreams/: alphaSorted.txt  countSorted.txt  input.txt  main.cpp
CW4_Kongdi_cpp. IOStreams/: input.txt  input_2.txt  main.cpp
Friend/: README.md  Students.cpp  Students.hpp
Lab23_AKongdi/: pseudocode_selection_sort.txt
Lab23_AKongdi/datasets/: dataset2.txt  dataset3.txt
PT1_Amara/: CMakeLists.txt  Dockerfile  README.md  constants.h  dockerfile_run.sh  funcs.h  menu_funcs.h  mytypes.h  task1.c  task2.c
PT1_Amara_prvt/: README.md  constants.h  mytypes.h  task1.c  task2.c  task3.c  task4.c  task5.c
PT_Kongdi_05122023/: README.md  main.c
PTs_AK/: .gitignore
PTs_AK/Amara_Kuruma_PT2/: CMakeLists.txt  cmake_install.cmake  compile.sh
PTs_AK/Amara_Kuruma_PT2/include/: digger.h
PTs_AK/Amara_Kuruma_PT2/src/: digger_list.c  digger_matrix.c  main.c
PTs_AK/Amara_Kuruma_PT3_part1/: CMakeLists.txt  compile.sh  sorts.c  sorts.h  test.c
PTs_AK/Amara_Kuruma_PT3_part2/: CMakeLists.txt  compile.sh
PTs_AK/Amara_Kuruma_PT3_part2/include/: generate_keys.h  hash_table.h  splay_tree.h
PTs_AK/Amara_Kuruma_PT3_part2/src/: generate_keys.c  hash_table.c  hash_table_main.c  splay_tree.c  splay_tree_main.c
kursa4/: main.cpp  menu.cpp  menu.hpp  student.cpp  student.hpp
(+27 files in other folders)
